--- a/css/styles.css
+++ b/css/styles.css
@@ -105,7 +105,7 @@ article{
 }
 
 #boton {
-    margin-left: 80px;
+    margin: 10px auto 0 auto;
     margin-bottom: 115px;
     display: flex;
     justify-content: center;
@@ -120,7 +120,7 @@ article{
 
   }
   #caja {
-    margin-left: 30px;
+    margin: 10px auto 0 auto;
     margin-bottom: 30px;
     height: auto;
     width: 310px;
@@ -134,17 +134,15 @@ article{
     width: 60px;
 }
 
-  #contactos {
-    margin-left: 50px;
-    display: inline-flex;
-    padding-left: 20px;
-    border: none;
-    background-color: white;
-    margin-bottom: 10px;
-    flex-direction: column;
+#contactos {
+    display: flex;
     justify-content: center;
     align-items: center;
-  }  
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
 
   #contactos li {
         font-size: 20px;
