--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ header {
     max-width: 100%;
   }
   
-  .header-left {
+  .encabezado-izq {
     display: flex;
     flex: 1;
   }
@@ -74,7 +74,7 @@ header {
     margin-right: 10px;
   }
 
-  .portada{
+  .fachada{
     display: flex;
     align-items: center;
     border-radius: 50%;
@@ -104,7 +104,7 @@ article{
     justify-content: center;
 }
 
-#boton {
+#button {
     margin: 10px auto 0 auto;
     margin-bottom: 115px;
     display: flex;
@@ -119,7 +119,7 @@ article{
     color: rgb(255, 255, 255);
 
   }
-  #caja {
+  #charla {
     margin: 10px auto 0 auto;
     margin-bottom: 30px;
     height: auto;
@@ -129,12 +129,12 @@ article{
     border-radius: 15px; 
 }
 
-.linked,.mail,.git{
+.git,.linkedIn,.correo {
     height: 60px;
     width: 60px;
 }
 
-#contactos {
+#contactame {
     display: flex;
     justify-content: center;
     align-items: center;
